--- a/server/package.json
+++ b/server/package.json
@@ -15,11 +15,16 @@
     "@grpc/proto-loader": "^0.5.5",
     "@types/google-protobuf": "^3.7.3",
     "@types/node": "^14.11.8",
+    "@types/uuid": "^8.3.0",
+    "dotenv": "^8.2.0",
     "google-protobuf": "^3.13.0",
     "grpc": "^1.24.3",
     "grpc-web": "^1.2.1",
+    "mysql2": "^2.2.5",
+    "sequelize": "^6.3.5",
     "ts-node-dev": "^1.0.0-pre.63",
-    "typescript": "^4.0.3"
+    "typescript": "^4.0.3",
+    "uuid": "^8.3.1"
   },
   "devDependencies": {
     "grpc-tools": "^1.9.1",
