--- a/web/package.json
+++ b/web/package.json
@@ -20,6 +20,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "run-envoy": "cd ./envoy && sh ./build.sh",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
