--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "start": "ts-node-dev ./index.ts",
+    "prettier:fix": "prettier --write .",
     "autogen": "sh ./scripts/generate_code.sh",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -28,6 +29,7 @@
   },
   "devDependencies": {
     "grpc-tools": "^1.9.1",
-    "grpc_tools_node_protoc_ts": "^5.0.0"
+    "grpc_tools_node_protoc_ts": "^5.0.0",
+    "prettier": "2.1.2"
   }
 }
