--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,14 +1,14 @@
 {
-    "compilerOptions": {
-      "moduleResolution": "node",
-      "module": "commonjs",
-      "target": "ES6",
-      "outDir": "./dist/",
-      "allowJs": true,
-      "noImplicitAny": true,
-      "removeComments": true,
-      "preserveConstEnums": true,
-    },
-    "include": ["./"],
-    "exclude": ["node_modules", "**/*.spec.ts"]
+  "compilerOptions": {
+    "moduleResolution": "node",
+    "module": "commonjs",
+    "target": "ES6",
+    "outDir": "./dist/",
+    "allowJs": true,
+    "noImplicitAny": true,
+    "removeComments": true,
+    "preserveConstEnums": true
+  },
+  "include": ["./"],
+  "exclude": ["node_modules", "**/*.spec.ts"]
 }
